--- a/style.css
+++ b/style.css
@@ -75,3 +75,8 @@ h2 {
     border-image: linear-gradient(blue, cyan) 30;
     border-image-slice: 1;
 }
+
+footer p {
+    text-align: center;
+    background-color: rgb(201, 150, 127);
+}
