--- a/style.css
+++ b/style.css
@@ -79,4 +79,8 @@ h2 {
 footer p {
     text-align: center;
     background-color: rgb(201, 150, 127);
+    padding: 50px;
+    margin-bottom: -50%;
+    font-size: 20px;
+    font-weight: 600;
 }
